discussion/kv_engine/171792/171792_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Don't use cb::engine_errc::no_mem when a scan needs to yield

Scans could need to yield for a variety of reasons, not just because
of a buffer being full (no_mem). This commit adds a yield/shouldYield
pair of methods to the StatusCallback to make it clearer when code
wants to pause/yield.

Underneath the yield method is a change to use 'temporary_failure'
as the status code.

Change-Id: If2260b3ed475d1441e8e8db1677e6809f9390f48

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-03-21 12:32:46.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-21 13:31:41.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16105/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:105:5: error: expected expression [clang-diagnostic-error]
    if (stream_->backfillReceived(std::move(item), BACKFILL_FROM_MEMORY)) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2881:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16105/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:105:5:
error: expected expression [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16105/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44571/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc(2881): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44571/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37521/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:105:5:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37521/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15033/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc b/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc
index 6012c2c29..a5482566f 100644
--- a/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc
+++ b/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc
@@ -2115,7 +2115,8 @@ public:
     void callback(CacheLookup&amp; val) override {
         // primaryCallbacks could be empty if we&#39;re below the purge seqno
         // and paused in an inconvenient place. Yield because we don&#39;t want the
-        // secondary scanning farther than the primary did and getting out of sync
+        // secondary scanning farther than the primary did and getting out of
+        // sync
         if (primaryCallbacks.empty() &amp;&amp;
             static_cast&lt;uint64_t&gt;(val.getBySeqno()) &lt;=
                     kvstore.getPurgeSeqno(vbid)) {
diff --git a/engines/ep/tests/module_tests/kvstore_test.cc b/engines/ep/tests/module_tests/kvstore_test.cc
index 450c5f954..a89140431 100644
--- a/engines/ep/tests/module_tests/kvstore_test.cc
+++ b/engines/ep/tests/module_tests/kvstore_test.cc
@@ -782,9 +782,8 @@ TEST_P(KVStoreParamTest, DelVBucketWhileScanning) {
                     mock-&gt;setStatus(cb::engine_errc::success);
                 });
         EXPECT_CALL(*mockGetCB, callback(_))
-                .WillOnce([mock = mockGetCB.get()](GetValue&amp;) {
-                    mock-&gt;yield();
-                });
+                .WillOnce(
+                        [mock = mockGetCB.get()](GetValue&amp;) { mock-&gt;yield(); });
         EXPECT_CALL(*mockGetCB, callback(_))
                 .WillRepeatedly([mock = mockGetCB.get()](GetValue&amp;) {
                     mock-&gt;setStatus(cb::engine_errc::success);

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15033/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16949/ : FAILURE

Compile error at [2022-03-21T13:00:45.196Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2881:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16949/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5762/ : FAILURE

Compile error at [2022-03-21T13:24:41.259Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2881:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5762/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18195/ : FAILURE

Compile error at [2022-03-21T13:30:44.488Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2881:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18195/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17874/ : FAILURE

Compile error at [2022-03-21T13:27:32.493Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2881:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17874/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5820/ : FAILURE

Compile error at [2022-03-21T13:05:00.439Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2881:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5820/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18907/ : FAILURE

Compile error at [2022-03-21T13:29:04.209Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2881:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18907/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26280/ : FAILURE
----------------------------------------------------------------------------------------------------------------------
